# grpfc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: cmake-multi-platform.yml  python-publish.yml
examples/rational_function/: analysis_setup.cpp
grpfpy/: version.py
include/: analyse.h  meshing.h  params.h
src/: adaptive_mesh.cpp  adaptive_mesh.h  analyse.cpp  analyse.h  grpf.cpp  grpfpy.cpp  initial_mesh.cpp  initial_mesh.h  main.cpp  meshing.cpp  params.h  phase.cpp  phase_grad.cpp  phase_grad.h  regular.cpp  regular.h  triangulation.cpp  triangulation.h  utils.h
unittest/: test_init_mesh.cpp  test_vinq.cpp
